fix spacing and alignment

--- a/css/login.css
+++ b/css/login.css
@@ -7,12 +7,17 @@
   text-align: center;
 }
 
+.welcome-message {
+  margin-bottom: 4rem;
+}
+
 .login-form {
   font-size: 1.5em;
 }
 
 .login-input {
-  margin: 1.5rem 0;
+  width: 80%;
+  margin: 1.5rem auto;
   display: block;
   background: transparent;
   border: none;
